--- a/index.html
+++ b/index.html
@@ -1,202 +1,70 @@
-https://script.google.com/macros/s/AKfycbxN6fB3zm_CtY9cJ_U9XYgBaUTczeqfmLxwpP_zFgVdoX36y6LiP80mueq9hD07elInig/exec
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>L2O LIFF App</title>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        #status { margin-top: 20px; font-weight: bold; }
+        button { padding: 10px 20px; font-size: 16px; }
+    </style>
+</head>
+<body>
+    <h1>歡迎加入無名牛排</h1>
+    <p>點擊按鈕提交您的 LINE 資訊到 Google Sheets。</p>
+    <button id="submitBtn">提交資訊</button>
+    <div id="status"></div>
 
+    <script>
+        async function main() {
+            try {
+                await liff.init({ liffId: '2008276630-bYNjwMx7' });
+                if (!liff.isLoggedIn()) {
+                    liff.login({ redirectUri: window.location.href });
+                } else {
+                    document.getElementById('submitBtn').disabled = false;
+                }
+            } catch (error) {
+                document.getElementById('status').textContent = 'LIFF 初始化失敗: ' + error.message;
+                document.getElementById('status').style.color = 'red';
+            }
+        }
 
+        document.getElementById('submitBtn').addEventListener('click', async () => {
+            const statusEl = document.getElementById('status');
+            statusEl.textContent = '正在取得資料...';
+            statusEl.style.color = 'blue';
 
-# ## 整體流程架構
+            try {
+                const profile = await liff.getProfile();
+                const data = {
+                    userId: profile.userId,
+                    displayName: profile.displayName,
+                    pictureUrl: profile.pictureUrl,
+                    statusMessage: profile.statusMessage || ''
+                };
 
-### 1. **前端 (LIFF 網頁)**
-```
-用戶掃碼 → 開啟 LIFF 網頁 → 取得用戶資料 → 傳送到後端
-```
+                const response = await fetch('https://script.google.com/macros/s/AKfycby0rb6FgDMz6XihnKDe847Kg22BxGeZ4WNJctf9mAJGl_6nbdZJgrI0V0Wv1uAmOyZIow/exec', {
+                    method: 'POST',
+                    mode: 'no-cors',  // 避免 CORS 問題，GAS 支援匿名存取
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                });
 
-### 2. **後端 (Google Apps Script)**
-```
-接收前端資料 → 驗證資料 → 寫入 Google Sheet → 回傳結果
-```
+                // 注意: no-cors 模式下無法讀取回應，但假設成功
+                statusEl.textContent = '提交成功！您的資訊已記錄。';
+                statusEl.style.color = 'green';
+            } catch (error) {
+                statusEl.textContent = '提交失敗: ' + error.message;
+                statusEl.style.color = 'red';
+            }
+        });
 
-### 3. **資料儲存 (Google Sheets)**
-```
-建立資料表 → 儲存用戶資訊 → 記錄時間戳記
-```
-
-## 詳細步驟說明
-
-### 步驟 1：建立 Google Apps Script 網路應用程式
-
-1. **建立新專案**
-   - 前往 [Google Apps Script](https://script.google.com/)
-   - 建立新專案
-   - 撰寫 `doPost` 函數處理 POST 請求
-
-2. **設定資料接收端點**
-   - 接收 JSON 格式的用戶資料
-   - 包含：LINE User ID、顯示名稱、頭像網址等
-   - 驗證資料完整性
-
-3. **連接 Google Sheets**
-   - 取得或建立 Google Sheet 檔案
-   - 設定資料欄位（時間戳記、User ID、姓名等）
-   - 實作資料寫入邏輯
-
-### 步驟 2：設定 LIFF 應用程式
-
-1. **LIFF 初始化**
-   - 在 LINE Developers Console 建立 LIFF App
-   - 設定正確的 LIFF ID
-   - 啟用所需權限（profile、openid）
-
-2. **用戶資料取得**
-   - 使用 `liff.getProfile()` 取得用戶資料
-   - 包含：userId、displayName、pictureUrl
-   - 確保用戶已登入
-
-3. **資料傳送**
-   - 將用戶資料打包成 JSON
-   - 使用 fetch API 傳送到 Google Apps Script
-   - 處理成功/失敗回應
-
-### 步驟 3：部署與測試
-
-1. **部署 Google Apps Script**
-   - 部署為網路應用程式
-   - 設定存取權限（所有人可存取）
-   - 取得部署網址
-
-2. **整合測試**
-   - 在 LIFF 中測試資料傳送
-   - 確認 Google Sheet 正確寫入
-   - 處理錯誤情況
-
-## 資料流向圖
-
-```
-LINE 用戶
-    ↓ (掃描 QR Code)
-LIFF 應用程式
-    ↓ (取得用戶資料)
-Google Apps Script (Web App)
-    ↓ (寫入資料)
-Google Sheets
-```
-
-## 重要注意事項
-
-### 安全性考量
-- 驗證請求來源
-- 避免重複記錄同一用戶
-- 處理敏感資料適當
-
-### 錯誤處理
-- 網路請求失敗處理
-- 用戶拒絕授權處理
-- Google Sheets 寫入失敗處理
-
-### 效能優化
-- 快取已處理用戶
-- 批次寫入資料
-- 適當的錯誤回饋
-
-這個流程可以確保
-
-
-
-用戶掃碼加入好友後，自動將其 LINE 用戶資訊記錄到 Google Sheets 中，便於後續管理與分析。
-API_KEY=gen-lang-client-0800331839
-rovider settings
-Basic information
-Provider ID 2004582030
-Provider name beefsteak
-2008276630-bYNjwMx7
-LIFF URL
-https://liff.line.me/2008276630-bYNjwMx7
-LIFF app name
-L2O
-Size
-Full
-Endpoint URL
-https://anonymousbeefsteak-cloud.github.io/qrcode/
-openid, profile, chat_message.write
-
-When you enable the "chat_message.write" scope, the browser minimization feature will be disabled
-
-Add friend option 
-On (normal)
-Options
-Scan QR 
-Module mode 
-
-LIFF app name
-LIFF ID
-LIFF URL
-Size
-L2O
-2008276630-bYNjwMx7
-
-https://script.google.com/macros/s/AKfycbxfrYlDMYiERpd1FRGNvp8QACLfm1jbm0yKVUq3RKD-YQfPcWLvEXDH6eBtPIRbOiKPig/exec
-
-no need to explain .fix it and whole complet and fixed html and 後端app javascript 
-    
-
-https://liff.line.me/2008276630-bYNjwMx7
-Full
-
-
-Use webhook 
-Webhook redelivery 
-Error statistics aggregation 
-LINE Official Account features
-Edit the message text and other settings for these features in the LINE Official Account Manager
-
-Allow bot to join group chats 
-Disabled
-
-Edit
-Auto-reply messages 
-Enabled
-
-Edit
-Greeting messages 
-Enabled
-
-Edit
-Channel access token
-Channel access token (long-lived) 
-hJ/VCrwaX67qCzgw0GL+pZ4gYduAYrnPV3D9UtwnaKNXnEVYGpefCO1Lu2chiXLGWf+vSyn35bwq2rm2srj96L3r8UCXluH2PA/VV/ldKSjZo7a0rPo/4whRWlERB/1MoDqYQXqx4y9oaRhFA6xFoAdB04t89/1O/w1cDnyilFU=
-
-Basic settings
-Basic information
-You can change your app name and icon in LINE Official Account Manager.
-
-Channel ID 
-2008190577
-
-Channel icon
-Channel name
-無名牛排
-Channel description
-無名牛排
-Email address 
-anonymousbeefsteak@gmail.com
-Privacy policy URL
-–
-Terms of use URL optional
-App types
-Bot
-Permissions 
-PROFILE
-Channel secret 
-f0dde9061285ba2105ba96fbe0e41f9c
-
-Assertion Signing Key 
-Your user ID 
-U02013fa93bee9f880df64d0ef0b63c18
-
-line token
-
-O3HioQPe67jIFCZUf5xkyESVdEhYTzUqlqAjd8mlOYzCvjiCFsx8nkbKmUpIXdbwWf+vSyn35bwq2rm2srj96L3r8UCXluH2PA/VV/ldKSi8AHRJk75Y8Ig9ML75rPBBSnRpPLRWvoKCzAQNvgpdTwdB04t89/1O/w1cDnyilFU=
-
-2008190545
-
-linw
-
-10756cbf09d3cf6612cada90b1179a67
+        main();
+    </script>
+</body>
+</html>
