--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <script>
         // 全域變數 - 最終強化版
-        const LIFF_ID = '2008276630-bYNjwMx7';  // <-- **請務必更新為您的 LIFF ID**
+        const LIFF_ID = '2008289130-9XPR8Kpj';  // <-- **請務必更新為您的 LIFF ID**
         const GAS_URL = 'https://script.google.com/macros/s/AKfycbzNF2-IPBKrqBHh1QwG5oFW8xnsmtHZu0uEYq1Tyfg80gIyDPkviuTUAzHXPsBqLuIy8A/exec';  // <-- **請務必更新為您的 GAS Web App URL**
         const statusEl = document.getElementById('status');
         const submitBtn = document.getElementById('submitBtn');
