--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <script type="text/babel">
         // --- LIFF Service Logic ---
-        const GOOGLE_APPS_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxQb-z1t0LroucriON7k1X94CHm2XgCf1kvz28rrsCReIstrtVIFkhySgHJ3j8uIHxPvQ/exec';
         const LIFF_ID = '2008289130-9XPR8Kpj';
 
         const initializeLiff = async () => {
